# amazon-bedrock-agentcore-policy-tutorials

./: .gitignore  CLAUDE.md  README.md  claude.md
00_setup/: README.md  create_uv_virtual_env.sh  pyproject.toml
01-Lambda-Target/: 01-Setup-Gateway-Lambda.ipynb  02-Policy-Enforcement.ipynb  README.md  policy_for_agentcore_tutorial.ipynb
02-MCP-Server-Target/: 01-Setup-MCP-Runtime-Gateway.ipynb  02-Policy-Enforcement.ipynb  Dockerfile  README.md  deploy_mcp_runtime.py  mcp_server.py  policy_for_mcp_target_tutorial.ipynb  requirements_runtime.txt
common/: __init__.py  auth_utils.py  cognito_utils.py  gateway_utils.py  policy_utils.py
docs/: README.md  cedar-policy.md  cognito.md  jwt-authorizer.md  troubleshooting.md
